syntax = "proto3";

import "google/protobuf/timestamp.proto";


package proto;

message Route {
  string SessionID = 1;
  string MemberID = 2;
  string GatewayAddr = 3;
  google.protobuf.Timestamp Lastseen = 4; 
}

message RouteRequest {
  repeated string MemberIDs = 1;
}

message RouteReply {
  repeated Route Routes = 1;
}

message DeleteSessionRequest {
  string SessionID = 1;
}


message CreateOrUpdateRouteRequest {
  string SessionID = 1;
  string MemberID = 2;
  string GatewayAddr = 3;
}


message EmptyRequest {}

message EmptyReply {}

service RouterService {
  rpc Routes (RouteRequest) returns (RouteReply) {}
  rpc CreateOrUpdateRoute (CreateOrUpdateRouteRequest) returns (EmptyReply) {}
  rpc DeleteSession (DeleteSessionRequest) returns (EmptyReply) {}
}